# pocro

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  create_test_invoice.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  test_settings.py  test_upload.py  tree.txt
data/: README.md
docs/: API_DOCUMENTATION.md  DEPLOYMENT.md  INSTALLATION.md  PRZEWODNIK_PRZETWARZANIA_FAKTUR.md  README.md  TROUBLESHOOTING.md
docs/examples/: api_usage.py  python_usage.py
monitoring/: health_check.py
scripts/: download_models.py  fix_packages.py  install_ocr_dependencies.sh  migrate_data.py  migrate_to_poetry.sh  poetry_setup.py  process_invoice.py  setup.sh  setup_environment.sh  start.sh  validate_installation.py
src/: __init__.py  main.py
src/api/: dependencies.py  middleware.py  routes.py
src/config/: logging_config.py  settings.py
src/core/: llm_processor.py  ocr_engine.py  pipeline.py  preprocessor.py  table_extractor.py
src/models/: invoice_schema.py  validation.py
src/prompts/: extraction_prompts.py
src/utils/: file_utils.py  image_utils.py  monitoring.py  text_utils.py
tests/: conftest.py  test_main.py
tests/integration/: test_api.py  test_pipeline.py
tests/performance/: test_memory_usage.py  test_throughput.py
tests/unit/: test_llm_processor.py  test_ocr_engine.py  test_preprocessor.py  test_table_extractor.py  test_validation.py
