[tool.poetry]
name = "pocro"
version = "0.1.3"
description = "OCR+LLM stack with GPU optimization, multilingual support, and EU compliance"
authors = ["Tom Sapletta <info@softreck.dev>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
# Core dependencies
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
python-multipart = "0.0.6"

# Database and Storage
sqlalchemy = "2.0.23"
alembic = "1.12.1"
redis = "5.0.1"

# Utilities
python-dotenv = "1.0.0"
click = "8.1.7"
tqdm = "4.66.1"
psutil = "5.9.6"

# Monitoring and Logging
prometheus-client = "0.19.0"
loguru = "0.7.2"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"
pytest-mock = "3.12.0"
httpx = "0.25.2"

# Code Quality
black = "23.11.0"
isort = "5.12.0"
flake8 = "6.1.0"
mypy = "1.7.1"
pre-commit = "3.5.0"

# Documentation
mkdocs = "1.5.3"
mkdocs-material = "9.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
