[tool.poetry]
name = "pocro"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
easyocr = "^1.7.0"
paddleocr = "^2.7.0"
opencv-python = "^4.6.0"
pdf2image = "^1.16.3"
PyMuPDF = "^1.23.8"
Pillow = "^10.1.0"
transformers = "^4.38.0"
torch = "^2.2.0"
torchvision = "^0.17.0"
vllm = "^0.8.5"  # Using a stable version
bitsandbytes = "^0.42.0"
accelerate = "^0.27.2"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
redis = "^5.0.1"
numpy = "^1.24.3"
pandas = "^2.1.3"
python-dotenv = "^1.0.0"
click = "^8.1.7"
tqdm = "^4.66.1"
psutil = "^5.9.6"
prometheus-client = "^0.19.0"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "pocro.main:main"