[tool.poetry]
name = "pocro"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"  # Using Python 3.11 for better compatibility
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
python-multipart = "^0.0.6"

# OCR and Image Processing
easyocr = "^1.7.0"
paddleocr = "^2.7.0"
opencv-python = "^4.6.0.66"  # Pinned to version compatible with paddleocr
pdf2image = "^1.16.3"
PyMuPDF = "^1.23.8"
Pillow = "^10.1.0"

# ML and Deep Learning
torch = "^2.1.0"
torchvision = "^0.16.0"
transformers = "^4.35.0"
accelerate = "^0.24.1"

# Database and Storage
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
redis = "^5.0.1"

# Utilities
numpy = "^1.24.3"
pandas = "^2.1.3"
python-dotenv = "^1.0.0"
click = "^8.1.7"
tqdm = "^4.66.1"
psutil = "^5.9.6"
prometheus-client = "^0.19.0"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "pocro.main:main"